Add some styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Finding Friends</title>
+		<link rel="stylesheet" href="/node_modules/spectre.css/dist/spectre.css" />
+		<link
+			rel="stylesheet"
+			href="/node_modules/spectre.css/dist/spectre-icons.css"
+		/>
 	</head>
 	<body>
 		<div id="root"></div>
